--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <title>Chad Okulovich</title>
-        <link rel="stylesheet" type="text/css" href="./mypage.css">
+        <link rel="stylesheet" type="text/css" href="./index.css">
     </head>
 
 <!--Body-->
