--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!--Video-->
     <div id="Home">
         <video autoplay muted loop id="Water_Video"> <!--Makes the video play automatically on a loop with no sound-->
-            <source src="./Water_Video.mp4" type="video/mp4">
+            <source src="Water_Video.mp4" type="video/mp4">
             Your browser does not support HTML5 video. <!--Display message if video fails to run-->
         </video>
     </div>
